3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

socket/request.c: In ReplyCmd() make sure the reply does not cause a buffer
   overflow.
Andreas Kirschbaum 2006-01-13

socket/request.c: add some better checks in addspell packet formation, fix a
   crash bug.
Brendan Lally 2006-01-13

server/c_object.c: stop rename crashing if there is no name to rename to
   when object is passed by number
--
server/c_object.c: allow the rename command to take tag of the item to be
   renamed, so that clients can form rename commands properly.
Brendan Lally 2006-01-11

server/c_range.c: allow spells cast by number to also have options passed to
   them
Changelog: Commit the changelog entry for the last commit.
Brendan Lally 2006-01-10

 Spell listing support:
 allow 'spell_paths' to be sent to requestinfo, reply with number:path
 change return type of SP_level_spellpoint_cost to sint16
 add spellmon as a setup value, if it is set;
  send path attunement/repulsion/denial in stats
  send data about spells in addspell packets
  send updates to that data
 Affected files:
 common/living.c
 crossedit/stubs.c
 doc/Developers/protocol
 include/funcpoint.h, newclient.h, newserver.h, player.h, sockproto.h,
sproto.h
 random_maps/standalone.c
 server/apply.c, login.c, spell_util.c, init.c, loop.c, request.c
 --
server/c_range.c: allow cast/invoke and prepare commands to take item tags
   as well as spell names
Brendan Lally 2006-01-09

Apply modified patch #1396303 (add setting to disable stealing from players)
by Terry Brown. It adds a new option "no_player_stealing" to the settings
file. If set, it prevents players from stealing from other players. It
defaults to ON.
--